Bug fix and add return
1. 清空购物车bug修复
2. 提交订单后的页面添加返回按钮

--- a/miniprogram/pages/supermarket/goods/pay/pay.wxss
+++ b/miniprogram/pages/supermarket/goods/pay/pay.wxss
@@ -20,3 +20,13 @@
     margin:20px auto;
     padding:10px;
 }
+.back_to_index{
+    display: block;
+    background-color: #69C3AA;
+    color:#FFF;
+    border-radius:3px;
+    width:50%;
+    text-align:center;
+    margin:20px auto;
+    padding:10px;
+}
