--- a/miniprogram/pages/supermarket/goods/pay/pay.wxml
+++ b/miniprogram/pages/supermarket/goods/pay/pay.wxml
@@ -6,4 +6,5 @@
     <navigator url="{{url}}">
         <text class="result_to_order" >查看订单</text>
     </navigator>
+    <text class="back_to_index" bindtap='back_to_index'>返回首页</text>
 </view>
