--- a/miniprogram/pages/supermarket/goods/goods.wxml
+++ b/miniprogram/pages/supermarket/goods/goods.wxml
@@ -1,23 +1,24 @@
 <!--pages/order/order.wxml-->
 <!--head -->
-<view class="header">
-    <view class="content-wrapper">
+<view class="header" style='width:100%;height:130px;'>
+    <!-- <view class="content-wrapper">
       <view class="avatar">
-        <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:64px;height:64px;"></image>
+         <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:64px;height:64px;"></image>
+         
       </view>
       <view class="content">
         <view class="title">
-          <image src="../image/brand@2x.png" style="width:30px;height:18px;"></image>
-          <span class="name">粥品香坊（回龙观）</span>
+          <image src="../image/brand@2x.png" style="width:30px;height:18px;"></image> 
+           <span class="name">粥品香坊（回龙观）</span>
         </view>
         <view class="description">
-            蜂鸟专送/38分钟送达
+             蜂鸟专送/38分钟送达 
         </view>
         <view v-if="seller.supports" class="support">
           <span class="icon" :class="classMap[seller.supports[0].type]">
-            <image src="../image/decrease_1@2x.png" style="width:12px;height:12px;"></image>
+             <image src="../image/decrease_1@2x.png" style="width:12px;height:12px;"></image>
           </span>
-          <span class="text">在线支付满28减5</span>
+          <span class="text">在线支付满28减5</span> 
         </view>
       </view>
       <view class="supports-count">
@@ -26,25 +27,27 @@
     </view>
     <view class="bulletin-wrapper">
       <image src="../image/bulletin@2x.png" style="width:22px;height:12px;"></image>
-      <span class="bulletin-text">"粥品香坊其烹饪粥料的秘方源于中国千年古法，在融和现代制作工艺，由世界烹饪大师屈浩先生领衔研发。坚守纯天然、0添加的良心品质深得消费者青睐，发展至今成为粥类的引领品牌。是2008年奥运会和2013年园博会指定餐饮服务商。"</span>
+       <span class="bulletin-text">"粥品香坊其烹饪粥料的秘方源于中国千年古法，在融和现代制作工艺，由世界烹饪大师屈浩先生领衔研发。坚守纯天然、0添加的良心品质深得消费者青睐，发展至今成为粥类的引领品牌。是2008年奥运会和2013年园博会指定餐饮服务商。"</span> 
     </view>
     <view class="background">
-      <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:100%;height:100%;"></image>
-    </view>
+       <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:100%;height:100%;"></image> 
+      
+    </view> -->
+    <image src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1539708848924&di=3950190aef56d63b57a096f6479db56e&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01d04955411e94000001e71b4ea78d.jpg%402o.jpg"></image>
   </view>
 <!--head -->
 
 <!--tab -->
 <view class="tab border-1px">
    <view class="tab-item">
-    <a class="{{status==0 ? 'active':''}}" bindtap="tabChange" data-type="0">商品</a>
+    <a class="{{status==0 ? 'active':''}}" bindtap="tabChange" data-type="0">超市</a>
    </view> 
    <view class="tab-item">
     <a class="{{status==1 ? 'active':''}}" bindtap="tabChange" data-type="1">评论</a>
    </view> 
-   <view class="tab-item">
+   <!-- <view class="tab-item">
     <a class="{{status==2 ? 'active':''}}" bindtap="tabChange" data-type="2">商家</a>
-   </view>
+   </view> -->
 </view>
 <!--tab -->
 
@@ -107,7 +110,7 @@
               <view class="num" wx:if="{{totalCount> 0}}">{{totalCount}}</view>
             </view>
             <view class="price highlight">￥{{totalPrice}}</view>
-            <view class="desc">另需配送费￥{{deliveryPrice}}元</view>
+            <!-- <view class="desc">另需配送费￥{{deliveryPrice}}元</view> -->
           </view>
           <view class="content-right" catchtap="pay">
             <view class="pay enough" :class="payClass">
