--- a/miniprogram/pages/supermarket/goods/goods.wxss
+++ b/miniprogram/pages/supermarket/goods/goods.wxss
@@ -574,13 +574,14 @@
 }
 
 /* tab */
+/*
 .tab {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 40px;
   line-height: 40px;
-  /* border: 1px solid rgba(7,17,27,0.1); */
+  /* border: 1px solid rgba(7,17,27,0.1); 
   position: relative;
 }
 
@@ -599,6 +600,7 @@
 .tab .tab-item .active {
   color: #f01414;
 }
+*/
 
 .list-mask {
   position: fixed;
