--- a/miniprogram/pages/supermarket/goods/goods.wxml
+++ b/miniprogram/pages/supermarket/goods/goods.wxml
@@ -1,6 +1,6 @@
 <!--pages/order/order.wxml-->
 <!--head -->
-<view class="header" style='width:100%;height: 170px;'>
+<view class="header" style="width:100%;height:310rpx;">
     <!-- <view class="content-wrapper">
       <view class="avatar">
          <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:64px;height:64px;"></image>
@@ -33,7 +33,7 @@
        <image src="http://static.galileo.xiaojukeji.com/static/tms/seller_avatar_256px.jpg" style="width:100%;height:100%;"></image> 
       
     </view> -->
-    <image src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1539708848924&di=3950190aef56d63b57a096f6479db56e&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01d04955411e94000001e71b4ea78d.jpg%402o.jpg"></image>
+    <image src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1539766171641&di=a10b73e25bc40ee870ff9651848461e5&imgtype=0&src=http%3A%2F%2Fe.hiphotos.baidu.com%2Fzhidao%2Fpic%2Fitem%2Fc83d70cf3bc79f3dccde5a0ab8a1cd11728b29c8.jpg"style="width:100%;height:310rpx;" ></image>
   </view>
 <!--head -->
 
