--- a/miniprogram/pages/supermarket/me/me.wxml
+++ b/miniprogram/pages/supermarket/me/me.wxml
@@ -58,7 +58,7 @@
         </view>
       </view>
     </navigator>
-    <navigator url="../user/help">
+    <navigator url="../me/help">
       <view class="user-order-title dis-flex b-f">
         <view class="flex-box">
           <text class="iconfont icon-help common-icon"></text>
