--- a/miniprogram/pages/supermarket/me/me.wxml
+++ b/miniprogram/pages/supermarket/me/me.wxml
@@ -30,17 +30,20 @@
            <open-data class="user-admin onelist-hidden" type="userNickName"></open-data>  
         </view>
         <view class="flex-box p-r">
-          <navigator hover-class="navigator-hover" url="../order/order?type=received">
-            <text class="iconfont icon-daishouhuo orderListIcon"></text>
-            <text class="{{ listCont_status==2? 'listCont-active':'listCont' }}" bindtap='listCont_change' data-type='2'>待收货</text>
-            <text class="user-tag p-a" wx:if="{{orderCount.received > 0}}">{{orderCount.received}}</text>
+         <navigator hover-class="navigator-hover" url="../order/order?type=delivery">
+          <text class="iconfont icon-daipingjia orderListIcon "></text>
+          <text class="{{ listCont_status==2? 'listCont-active':'listCont' }}" bindtap='listCont_change' data-type='2'>待发货</text>
+          <text class="user-tag p-a" wx:if="{{false}}"></text>
           </navigator>
         </view>
         <view class="flex-box p-r">
-          <text class="iconfont icon-daipingjia orderListIcon "></text>
-          <text class="{{ listCont_status==3? 'listCont-active':'listCont' }}" bindtap='listCont_change' data-type='3'>待评价</text>
-          <text class="user-tag p-a" wx:if="{{false}}"></text>
+          <navigator hover-class="navigator-hover" url="../order/order?type=received">
+            <text class="iconfont icon-daishouhuo orderListIcon"></text>
+            <text class="{{ listCont_status==3? 'listCont-active':'listCont' }}" bindtap='listCont_change' data-type='3'>待收货</text>
+            <text class="user-tag p-a" wx:if="{{orderCount.received > 0}}">{{orderCount.received}}</text>
+          </navigator>
         </view>
+        
       </view>
     </view>
   </view>
