--- a/miniprogram/pages/supermarket/pay/pay.wxml
+++ b/miniprogram/pages/supermarket/pay/pay.wxml
@@ -6,5 +6,7 @@
     <navigator url="{{url}}">
         <text class="result_to_order" >查看订单</text>
     </navigator>
-    <text class="back_to_index" bindtap='back_to_index'>返回首页</text>
+    <navigator url='../goods/goods'>
+        <text class="back_to_index">返回首页</text>
+    </navigator>
 </view>
