更改news公告页
1.尝试添加广告盒子
2.更改tabBar icon

--- a/miniprogram/pages/supermarket/news/news.wxml
+++ b/miniprogram/pages/supermarket/news/news.wxml
@@ -1,2 +1,6 @@
 <!--pages/supermarket/news/news.wxml-->
-<text>pages/supermarket/news/news.wxml</text>
+<view class='wrapper'>
+  <view class='adv'>优惠活动广告</view>
+  <view class='adv'>优惠活动广告</view>
+  <view class='adv'>优惠活动广告</view>
+</view>
