地址页面一系列修改
1. 从服务器获取地址列表的接口由异步改为同步
2. 可以设置默认收货地址了
3. 添加完新地址后自动返回上一级页面
4. 可以修改编辑已存在的地址了

--- a/miniprogram/pages/supermarket/address/address.wxml
+++ b/miniprogram/pages/supermarket/address/address.wxml
@@ -20,9 +20,9 @@
         <view class="list address-left">
           <radio-group bindchange="setDefault" class="radio-group">
             <label class="radio">
-              <radio checked="{{item.address_id === default_id}}" color="#ff495e" value="{{item.address_id}}"></radio>
-              <text class="cont" wx:if="{{item.address_id === default_id}}">默认</text>
-              <text class="cont" wx:else>选择</text>
+              <radio checked="{{item.addressId === default_id}}" color="#ff495e" value="{{item.addressId}}"></radio>
+              <text class="cont" wx:if="{{item.addressId === default_id}}">默认</text>
+              <text class="cont" wx:else>设为默认地址</text>
             </label>
           </radio-group>
         </view>
