--- a/miniprogram/pages/supermarket/goods/goods.wxml
+++ b/miniprogram/pages/supermarket/goods/goods.wxml
@@ -54,31 +54,33 @@
 <!--tab -->
 
 <view class="goods" wx:if="{{status==0||item.status==status}}">
+<!-- 左边的菜单 -->
   <view class="menu-wrapper">
     <scroll-view scroll-y="true" style="height: 450px;">
       <view wx:for="{{goods}}" class="menu-item border-1px" bindtap="selectMenu" data-item-index="{{index}}">
         <view class="text">
-          {{item.name}}
+          {{item.categoryName}}
         </view>
       </view>
     </scroll-view>
   </view>
+<!-- 右边商品列表 -->
   <scroll-view scroll-y="true" style="height: 400px;" scroll-into-view="{{toView}}" class="foods-wrapper">
     <view wx:for="{{goods}}" class="food-list food-list-hook" wx:for-index="parentIndex">
-      <view id="order{{parentIndex}}" class="title">{{item.name}}</view>
-      <view wx:for="{{item.foods}}" class="food-item" wx:for-item="food" data-food="{{food}}">
+      <view id="order{{parentIndex}}" class="title">{{item.categoryName}}</view>
+      <view wx:for="{{item.commodityList}}" class="food-item" wx:for-item="food" data-food="{{food}}">
         <view class="icon">
           <image src="{{food.icon}}" style="width: 57px;height: 57px"></image>
         </view>
         <view class="content">
-          <view class="name">{{food.name}}</view>
-          <view class="desc">{{food.description}}</view>
+          <view class="name">{{food.commodityName}}</view>
+          <view class="desc">{{food.commoditySpecification}}</view>
           <view class="extra">
-            <text class="count">月售{{food.sellCount}}</text>
-            <text class="count">好评{{food.rating}}</text>
+            <text class="count">剩余{{food.commodityNum}}</text>
+            <!-- <text class="count">好评{{food.rating}}</text> -->
           </view>
           <view class="price">
-            <view class="now">￥{{food.price}}</view>
+            <view class="now">￥{{food.commodityPrice}}</view>
             <view class="old" wx:if="{{food.oldPrice}}">￥{{food.oldPrice}}</view>
           </view>
 
@@ -100,8 +102,6 @@
   </scroll-view>
 
   <!--shopCart-->
-  <view>
-    <view>
       <view class="shopCart">
         <view class="content" bindtap="toggleList">
           <view class="content-left">
@@ -149,8 +149,6 @@
           </view>
         </view>
       </view>
-    </view>
-  </view>
   <view name="fade">
     <view class="list-mask" wx:if="{{listShow}}" bindtap="hideList"></view>
   </view>
