--- a/miniprogram/pages/supermarket/me/me.wxml
+++ b/miniprogram/pages/supermarket/me/me.wxml
@@ -14,13 +14,13 @@
             <text class="listCont">全部订单</text>
           </navigator>
         </view>
-        <view class="flex-box p-r">
+        <!-- <view class="flex-box p-r">
           <navigator hover-class="navigator-hover" url="../order/order?type=payment">
             <text class="iconfont icon-daifukuan orderListIcon "></text>
             <text class="listCont">待付款</text>
             <text class="user-tag p-a" wx:if="{{orderCount.payment > 0}}">{{orderCount.payment}}</text>
           </navigator>
-        </view>
+        </view> -->
         <view class="p-r" style=" flex:1.4;">
           <view class="header-img-box">
              <!-- <image src="{{userInfo.avatarUrl}}"></image>  -->
@@ -29,17 +29,17 @@
           <!-- <text class="user-admin onelist-hidden">{{userInfo.nickName}}</text> -->
            <open-data class="user-admin onelist-hidden" type="userNickName"></open-data>  
         </view>
-        <view class="flex-box p-r">
+        <!-- <view class="flex-box p-r">
          <navigator hover-class="navigator-hover" url="../order/order?type=delivery">
           <text class="iconfont icon-daipingjia orderListIcon "></text>
           <text class="listCont">待发货</text>
           <text class="user-tag p-a" wx:if="{{false}}"></text>
           </navigator>
-        </view>
+        </view> -->
         <view class="flex-box p-r">
           <navigator hover-class="navigator-hover" url="../order/order?type=received">
             <text class="iconfont icon-daishouhuo orderListIcon"></text>
-            <text class="listCont">待收货</text>
+            <text class="listCont">已完成</text>
             <text class="user-tag p-a" wx:if="{{orderCount.received > 0}}">{{orderCount.received}}</text>
           </navigator>
         </view>
