--- a/miniprogram/pages/supermarket/me/me.wxss
+++ b/miniprogram/pages/supermarket/me/me.wxss
@@ -100,7 +100,7 @@
 .user-admin {
   font-size: 32rpx;
   text-align: center;
-  margin: 20rpx 20rpx 0 40rpx;
+  margin: 20rpx 0rpx 0rpx 110rpx;
   color: #444;
 }
 
